WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264884
REGRESSION (
270722@main
): [ macOS Debug ] Multiple TestWebKitAPI.WKWebExtension tests are failing
https://bugs.webkit.org/show_bug.cgi?id=264884
Summary
REGRESSION (270722@main): [ macOS Debug ] Multiple TestWebKitAPI.WKWebExtensi...
Marta Darbinyan
Reported
2023-11-15 09:39:46 PST
Description: The following tests are crashing on ToT since
270725@main
api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.Remove api-tests: TestWebKitAPI.WKWebExtensionAPITabs.CreateWithSpecifiedOptions api-tests: TestWebKitAPI.WKWebExtensionAPITabs.GoForward api-tests: TestWebKitAPI.WKWebExtensionAPITabs.ToggleReaderMode api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.FocusChangedEvent api-tests: TestWebKitAPI.WKWebExtensionAPITabs.RemoveMultipleTabs api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Update api-tests: TestWebKitAPI.WKWebExtensionAPITabs.GoBack api-tests: TestWebKitAPI.WKWebExtensionAPITabs.QueryWithPrivateAccess api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.GetLastFocused api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.RemovedEvent api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.CreatedEvent api-tests: TestWebKitAPI.WKWebExtensionAPITabs.DuplicateWithOptions api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Zoom api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Get api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Remove api-tests: TestWebKitAPI.WKWebExtensionAPITabs.DetachedAndAttachedEvent api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Create api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Duplicate api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Reload api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.GetAll api-tests: TestWebKitAPI.WKWebExtensionAPITabs.DetectLanguage api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.Errors api-tests: TestWebKitAPI.WKWebExtensionAPITabs.Query api-tests: TestWebKitAPI.WKWebExtensionAPIWindows.GetCurrent api-tests: TestWebKitAPI.WKWebExtensionAPIExtension.InIncognitoContext History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.WKWebExtensionAPIExtension.InIncognitoContextWithoutPrivateAccess&test=TestWebKitAPI.WKWebExtensionAPITabs.Create&test=TestWebKitAPI.WKWebExtensionAPITabs.CreateWithRelativeURL&test=TestWebKitAPI.WKWebExtensionAPITabs.CreateWithSpecifiedOptions&test=TestWebKitAPI.WKWebExtensionAPITabs.CreatedEvent&test=TestWebKitAPI.WKWebExtensionAPITabs.DetachedAndAttachedEvent&test=TestWebKitAPI.WKWebExtensionAPITabs.DetectLanguage&test=TestWebKitAPI.WKWebExtensionAPITabs.Duplicate&test=TestWebKitAPI.WKWebExtensionAPITabs.DuplicateWithOptions&test=TestWebKitAPI.WKWebExtensionAPITabs.Get&test=TestWebKitAPI.WKWebExtensionAPITabs.GetCurrent&test=TestWebKitAPI.WKWebExtensionAPITabs.GoBack&test=TestWebKitAPI.WKWebExtensionAPITabs.GoForward&test=TestWebKitAPI.WKWebExtensionAPITabs.Query&test=TestWebKitAPI.WKWebExtensionAPITabs.QueryWithPrivateAccess&test=TestWebKitAPI.WKWebExtensionAPITabs.Reload&test=TestWebKitAPI.WKWebExtensionAPITabs.Remove&test=TestWebKitAPI.WKWebExtensionAPITabs.RemoveMultipleTabs&test=TestWebKitAPI.WKWebExtensionAPITabs.RemovedEvent&test=TestWebKitAPI.WKWebExtensionAPITabs.ToggleReaderMode&test=TestWebKitAPI.WKWebExtensionAPITabs.Update&test=TestWebKitAPI.WKWebExtensionAPITabs.UpdatedEvent&test=TestWebKitAPI.WKWebExtensionAPITabs.Zoom&test=TestWebKitAPI.WKWebExtensionAPIWindows.CreatedEvent&test=TestWebKitAPI.WKWebExtensionAPIWindows.Errors&test=TestWebKitAPI.WKWebExtensionAPIWindows.FocusChangedEvent&test=TestWebKitAPI.WKWebExtensionAPIWindows.GetAll&test=TestWebKitAPI.WKWebExtensionAPIWindows.GetAllWithPrivateAccess&test=TestWebKitAPI.WKWebExtensionAPIWindows.GetCurrent&test=TestWebKitAPI.WKWebExtensionAPIWindows.GetLastFocused&test=TestWebKitAPI.WKWebExtensionAPIWindows.Remove&test=TestWebKitAPI.WKWebExtensionAPIWindows.RemovedEvent
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-15 09:42:36 PST
<
rdar://problem/118461886
>
Marta Darbinyan
Comment 2
2023-11-15 09:47:55 PST
Error logs: TestWebKitAPI.WKWebExtensionAPIExtension.InIncognitoContextWithoutPrivateAccess *** Terminating app due to uncaught exception 'NSInternalInconsistencyException', reason: 'Window returned by windowForWebExtensionContext: does not contain the tab' *** First throw call stack: ( 0 CoreFoundation 0x00000001908a6800 __exceptionPreprocess + 176 1 libobjc.A.dylib 0x000000019039deb4 objc_exception_throw + 60 2 CoreFoundation 0x00000001908a66f0 +[NSException exceptionWithName:reason:userInfo:] + 0 3 WebKit 0x0000000154874a34 _ZNK6WebKit15WebExtensionTab6windowENS0_17SkipContainsCheckE + 624 4 WebKit 0x0000000154873ffc _ZNK6WebKit15WebExtensionTab10parametersEv + 92 5 WebKit 0x000000015477e934 _ZZN6WebKit19WebExtensionContext22didChangeTabPropertiesERNS_15WebExtensionTabEN3WTF9OptionSetINS1_17ChangedPropertiesEEEENK3$_6clEv + 356 6 WebKit 0x000000015477ebd8 _ZZN3WTF11BlockPtrArcIFvvEE12fromCallableIZN6WebKit19WebExtensionContext22didChangeTabPropertiesERNS4_15WebExtensionTabENS_9OptionSetINS6_17ChangedPropertiesEEEE3$_6EES2_T_ENKUlPvE_clESD_ + 32 7 WebKit 0x000000015477ebac _ZZN3WTF11BlockPtrArcIFvvEE12fromCallableIZN6WebKit19WebExtensionContext22didChangeTabPropertiesERNS4_15WebExtensionTabENS_9OptionSetINS6_17ChangedPropertiesEEEE3$_6EES2_T_ENUlPvE_8__invokeESD_ + 8 libdispatch.dylib 0x00000001905a7910 _dispatch_client_callout + 20 9 libdispatch.dylib 0x00000001905aadc8 _dispatch_continuation_pop + 600 10 libdispatch.dylib 0x00000001905bebe4 _dispatch_source_latch_and_call + 420 11 libdispatch.dylib 0x00000001905bd7b4 _dispatch_source_invoke + 832 12 libdispatch.dylib 0x00000001905b5eb8 _dispatch_main_queue_drain + 744 13 libdispatch.dylib 0x00000001905b5bc0 _dispatch_main_queue_callback_4CF + 44 14 CoreFoundation 0x000000019087315c __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 16 15 CoreFoundation 0x0000000190830a80 __CFRunLoopRun + 1996 16 CoreFoundation 0x000000019082fc5c CFRunLoopRunSpecific + 608 17 Foundation 0x0000000191938a78 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 18 TestWebKitAPI 0x0000000101b2c064 _ZN13TestWebKitAPI4Util3runEPb + 108 19 TestWebKitAPI 0x0000000101b39204 -[TestWebExtensionManager runForTimeInterval:] + 224 20 TestWebKitAPI 0x0000000101905f48 _ZN13TestWebKitAPI70WKWebExtensionAPIExtension_InIncognitoContextWithoutPrivateAccess_Test8TestBodyEv + 2264 21 TestWebKitAPI 0x0000000101c1364c _ZN7testing8internal38HandleSehExceptionsInMethodIfSupportedINS_4TestEvEET0_PT_MS4_FS3_vEPKc + 132 22 TestWebKitAPI 0x0000000101bca85c _ZN7testing8internal35HandleExceptionsInMethodIfSupportedINS_4TestEvEET0_PT_MS4_FS3_vEPKc + 96 23 TestWebKitAPI 0x0000000101bca7ac _ZN7testing4Test3RunEv + 192 24 TestWebKitAPI 0x0000000101bcb814 _ZN7testing8TestInfo3RunEv + 244 25 TestWebKitAPI 0x0000000101bcc984 _ZN7testing9TestSuite3RunEv + 276 26 TestWebKitAPI 0x0000000101bda624 _ZN7testing8internal12UnitTestImpl11RunAllTestsEv + 1008 27 TestWebKitAPI 0x0000000101c13f2c _ZN7testing8internal38HandleSehExceptionsInMethodIfSupportedINS0_12UnitTestImplEbEET0_PT_MS4_FS3_vEPKc + 132 28 TestWebKitAPI 0x0000000101bd9ff8 _ZN7testing8internal35HandleExceptionsInMethodIfSupportedINS0_12UnitTestImplEbEET0_PT_MS4_FS3_vEPKc + 96 29 TestWebKitAPI 0x0000000101bd9ee4 _ZN7testing8UnitTest3RunEv + 216 30 TestWebKitAPI 0x0000000101185318 _Z13RUN_ALL_TESTSv + 16 31 TestWebKitAPI 0x00000001011852ac _ZN13TestWebKitAPI15TestsController3runEiPPc + 156 32 TestWebKitAPI 0x0000000101b9ed58 main + 548 33 dyld 0x00000001903d90e0 start + 2360 ) libc++abi: terminating due to uncaught exception of type NSException
Chris Dumez
Comment 3
2023-11-15 10:10:50 PST
Looks like a regression from
https://commits.webkit.org/270722@main
based on the graphs.
Timothy Hatcher
Comment 4
2023-11-15 10:22:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20548
Timothy Hatcher
Comment 5
2023-11-15 12:12:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20554
EWS
Comment 6
2023-11-15 12:22:19 PST
Committed
270783@main
(5bb3967aa676): <
https://commits.webkit.org/270783@main
> Reviewed commits have been landed. Closing PR #20554 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug