REGRESSION (270722@main): [ macOS Debug ] Multiple TestWebKitAPI.WKWebExtension tests are failing. https://webkit.org/b/264884 rdar://problem/118461886

Reviewed by Chris Dumez.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::didChangeTabProperties): Get the tab again, it might have closed
since this was scheduled.

Canonical link: https://commits.webkit.org/270783@main